Добавил разметку основной части сайта
Состоит из заголовка первого уровня и списка событий, который реализован с помощью тэга template

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,12 @@
                 </div>
             </div>
         </header>
-        <main class="main page__main"></main>
+        <main class="main page__main">
+            <div class="main-inner">
+                <h1 class="title main__title">Лента событий</h1>
+                <div class="container"></div>
+            </div>
+        </main>
         <footer class="footer page__footer"></footer>
     </div>
 
