Изменил webpack, добавил стили для десктоп версии шапки и подвала сайта
Добавил svg в wepack, добавил метатег robots, добавил стили шапки и подвала сайта.

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="robots" content="noindex">
     <title>Яндекс Дом</title>
     <link rel="stylesheet" href="<%=htmlWebpackPlugin.files.chunks.main.css %>">
 </head>
@@ -95,13 +96,13 @@
             <div class="footer-area">
                 <div class="menu footer__menu">
                     <a class="menu__link" href="#">Помощь</a>
-                    <a class="menur__link" href="#">Обратная связь</a>
+                    <a class="menu__link" href="#">Обратная связь</a>
                     <a class="menu__link" href="#">Разработчикам</a>
                     <a class="menu__link" href="#">Условия использования</a>
                     <a class="menu__link" href="../assets/license.pdf">Авторские права</a>
                 </div>
                 <div class="copyright footer__copyright">
-                    <p class="copyright__text">© 2001–2017 ООО «Яндекс»</p>
+                    <p class="copyright__text">&copy; 2001–2017 ООО «<a class="menu__link" href="https://yandex.ru/">Яндекс</a>»</p>
                 </div>
             </div>
         </footer>
