--- a/src/index.html
+++ b/src/index.html
@@ -18,9 +18,6 @@
                     <a class="logo__link" href="#"></a>
                 </div>
                 <div class="menu header__menu">
-                    <span class="menu__link">
-                            <span class="menu__icon"></span>
-                    </span>
                     <nav class="nav header__nav">
                         <a class="nav__link nav__link_active" href="#">События</a>
                         <a class="nav__link" href="#">Сводка</a>
@@ -28,6 +25,7 @@
                         <a class="nav__link" href="#">Сценарии</a>
                     </nav>
                 </div>
+                <div class="menu__burger"></div>
             </div>
         </header>
         <main class="main page__main">
