Подправил стили для мобильной версии, добавил подпись под изображением пылесоса (приближение и яркость)

--- a/src/index.html
+++ b/src/index.html
@@ -89,6 +89,15 @@
                                     <div class="buttons event__buttons"></div>
     
                                     <picture class="event__picture"></picture>
+                                    
+                                    <div class="picture__info">
+                                        <div class="zoom">
+                                            Приближение: <span class="zoom__value">78%</span>
+                                        </div>
+                                        <div class="brightness">
+                                            Яркость: <span class="brightness__value">50%</span>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
